bk_ida/gccida/c1/count_pseudo
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_pseudo/src/reload1.c:2064:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 1599, "count_pseudo"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_pseudo/src/reload1.c:2070:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[v3] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_pseudo/src/reload1.c:2089:29: error: use of undeclared identifier 'unk_9CF38C'
v8 = ( _DWORD *)( ( char *)&unk_9CF38C + 4 * v6 + 4 * v2); 
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/count_pseudo/src/obj/reload1.o] Error 1
